[package]
authors = ["Finomnis <finomnis@gmail.com>"]
name = "clock-frequency-measurement"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
cortex-m-rtic = "1"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
# TODO(4) enter your HAL here
# some-hal = "1.2.3"
stm32g0xx-hal = { version = "0.1.2", features = ["rt", "stm32g030"] }
embedded-hal = { version = "0.2" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# [patch.crates-io]
# stm32g0xx-hal = { path = '../../stm32g0xx-hal' }
